# cypher-graph

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  conversations.py  graph.py  health.py
backend/app/core/: auth.py  config.py  database.py
backend/app/llm/: coordinator.py  coordinator_v2.py  coordinator_v3.py  models.py  prompts.py
backend/app/llm/deepagents/: AGENTS.md
backend/app/llm/deepagents/skills/cypher-querying/: SKILL.md
backend/app/llm/deepagents/skills/result-synthesis/: SKILL.md
backend/app/llm/deepagents/skills/schema-exploration/: SKILL.md
backend/app/llm/tools/: __init__.py  chart_build_tool.py  chart_recommendation_tool.py  graph_cypher_tool.py  graph_query_tool.py  graph_schema_tool.py  utility_tools.py
backend/app/models/: __init__.py  conversation.py  user.py
backend/app/schemas/: chat.py  common.py  graph.py
backend/app/services/: neo4j_service.py  query_guard.py
backend/tests/: test_coordinator_tool_parsing.py  test_graph_cypher_tool_helpers.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: providers.tsx
frontend/src/components/chart/: ChartView.tsx
frontend/src/components/chat/: ChatPanel.tsx  ConversationHistory.tsx
frontend/src/lib/api/: client.ts
frontend/src/store/: useChatStore.ts  useWorkspaceStore.ts
stitch/: DESIGN.md  code.html
(+5 files in other folders)
