[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.13",
    "langchain-neo4j>=0.7.0",
    "langchain-openai>=1.1.11",
    "neo4j>=6.1.0",
    "openai>=1.109.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "deepagents>=0.4.12",
]
